# micrograd-cplusplus

./: CMakeLists.txt  Module.h  README.md  Value.h  build.sh  engine.cpp  main.cpp  test_Value.cpp
